Format code with Spotless